crates/spite-parser/tests/snapshots/parser_integration__optional_chaining__optional_chain_syntax_snapshot.snap
---
source: crates/spite-parser/tests/optional_chaining.rs
expression: "parse_script(\"obj?.a[key]?.(x,...ys).b; (obj?.a)(x); delete obj?.[key]; new (obj?.Ctor)(x); true?.30:false;\").unwrap()"
---
Script {
    statements: [
        Statement {
            kind: Expression(
                Expr {
                    depth: 2,
                    kind: OptionalChain {
                        base: Expr {
                            depth: 1,
                            kind: Identifier(
                                "obj",
                            ),
                            span: Span {
                                start: 0,
                                end: 3,
                            },
                        },
                        steps: [
                            ChainStep {
                                optional: true,
                                kind: Property(
                                    Literal(
                                        String(
                                            "a",
                                        ),
                                    ),
                                ),
                                span: Span {
                                    start: 3,
                                    end: 6,
                                },
                            },
                            ChainStep {
                                optional: false,
                                kind: Property(
                                    Computed(
                                        Expr {
                                            depth: 1,
                                            kind: Identifier(
                                                "key",
                                            ),
                                            span: Span {
                                                start: 7,
                                                end: 10,
                                            },
                                        },
                                    ),
                                ),
                                span: Span {
                                    start: 0,
                                    end: 11,
                                },
                            },
                            ChainStep {
                                optional: true,
                                kind: Call(
                                    [
                                        Expression(
                                            Expr {
                                                depth: 1,
                                                kind: Identifier(
                                                    "x",
                                                ),
                                                span: Span {
                                                    start: 14,
                                                    end: 15,
                                                },
                                            },
                                        ),
                                        Spread(
                                            Expr {
                                                depth: 1,
                                                kind: Identifier(
                                                    "ys",
                                                ),
                                                span: Span {
                                                    start: 19,
                                                    end: 21,
                                                },
                                            },
                                        ),
                                    ],
                                ),
                                span: Span {
                                    start: 11,
                                    end: 22,
                                },
                            },
                            ChainStep {
                                optional: false,
                                kind: Property(
                                    Literal(
                                        String(
                                            "b",
                                        ),
                                    ),
                                ),
                                span: Span {
                                    start: 0,
                                    end: 24,
                                },
                            },
                        ],
                    },
                    span: Span {
                        start: 0,
                        end: 24,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 25,
            },
        },
        Statement {
            kind: Expression(
                Expr {
                    depth: 4,
                    kind: Call {
                        callee: Expr {
                            depth: 3,
                            kind: Parenthesized(
                                Expr {
                                    depth: 2,
                                    kind: OptionalChain {
                                        base: Expr {
                                            depth: 1,
                                            kind: Identifier(
                                                "obj",
                                            ),
                                            span: Span {
                                                start: 27,
                                                end: 30,
                                            },
                                        },
                                        steps: [
                                            ChainStep {
                                                optional: true,
                                                kind: Property(
                                                    Literal(
                                                        String(
                                                            "a",
                                                        ),
                                                    ),
                                                ),
                                                span: Span {
                                                    start: 30,
                                                    end: 33,
                                                },
                                            },
                                        ],
                                    },
                                    span: Span {
                                        start: 27,
                                        end: 33,
                                    },
                                },
                            ),
                            span: Span {
                                start: 26,
                                end: 34,
                            },
                        },
                        arguments: [
                            Expression(
                                Expr {
                                    depth: 1,
                                    kind: Identifier(
                                        "x",
                                    ),
                                    span: Span {
                                        start: 35,
                                        end: 36,
                                    },
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 26,
                        end: 37,
                    },
                },
            ),
            span: Span {
                start: 26,
                end: 38,
            },
        },
        Statement {
            kind: Expression(
                Expr {
                    depth: 3,
                    kind: Unary(
                        Delete,
                        Expr {
                            depth: 2,
                            kind: OptionalChain {
                                base: Expr {
                                    depth: 1,
                                    kind: Identifier(
                                        "obj",
                                    ),
                                    span: Span {
                                        start: 46,
                                        end: 49,
                                    },
                                },
                                steps: [
                                    ChainStep {
                                        optional: true,
                                        kind: Property(
                                            Computed(
                                                Expr {
                                                    depth: 1,
                                                    kind: Identifier(
                                                        "key",
                                                    ),
                                                    span: Span {
                                                        start: 52,
                                                        end: 55,
                                                    },
                                                },
                                            ),
                                        ),
                                        span: Span {
                                            start: 49,
                                            end: 56,
                                        },
                                    },
                                ],
                            },
                            span: Span {
                                start: 46,
                                end: 56,
                            },
                        },
                    ),
                    span: Span {
                        start: 39,
                        end: 56,
                    },
                },
            ),
            span: Span {
                start: 39,
                end: 57,
            },
        },
        Statement {
            kind: Expression(
                Expr {
                    depth: 4,
                    kind: New {
                        callee: Expr {
                            depth: 3,
                            kind: Parenthesized(
                                Expr {
                                    depth: 2,
                                    kind: OptionalChain {
                                        base: Expr {
                                            depth: 1,
                                            kind: Identifier(
                                                "obj",
                                            ),
                                            span: Span {
                                                start: 63,
                                                end: 66,
                                            },
                                        },
                                        steps: [
                                            ChainStep {
                                                optional: true,
                                                kind: Property(
                                                    Literal(
                                                        String(
                                                            "Ctor",
                                                        ),
                                                    ),
                                                ),
                                                span: Span {
                                                    start: 66,
                                                    end: 72,
                                                },
                                            },
                                        ],
                                    },
                                    span: Span {
                                        start: 63,
                                        end: 72,
                                    },
                                },
                            ),
                            span: Span {
                                start: 62,
                                end: 73,
                            },
                        },
                        arguments: Some(
                            [
                                Expression(
                                    Expr {
                                        depth: 1,
                                        kind: Identifier(
                                            "x",
                                        ),
                                        span: Span {
                                            start: 74,
                                            end: 75,
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                    span: Span {
                        start: 58,
                        end: 76,
                    },
                },
            ),
            span: Span {
                start: 58,
                end: 77,
            },
        },
        Statement {
            kind: Expression(
                Expr {
                    depth: 2,
                    kind: Conditional(
                        Expr {
                            depth: 1,
                            kind: Literal(
                                Boolean(
                                    true,
                                ),
                            ),
                            span: Span {
                                start: 78,
                                end: 82,
                            },
                        },
                        Expr {
                            depth: 1,
                            kind: Literal(
                                Number(
                                    0.3,
                                ),
                            ),
                            span: Span {
                                start: 83,
                                end: 86,
                            },
                        },
                        Expr {
                            depth: 1,
                            kind: Literal(
                                Boolean(
                                    false,
                                ),
                            ),
                            span: Span {
                                start: 87,
                                end: 92,
                            },
                        },
                    ),
                    span: Span {
                        start: 78,
                        end: 92,
                    },
                },
            ),
            span: Span {
                start: 78,
                end: 93,
            },
        },
    ],
    strict: false,
}
