crates/spite-parser/tests/snapshots/parser_integration__optional_chaining__syntax_and_diagnostic_snapshots-5.snap
---
source: crates/spite-parser/tests/optional_chaining.rs
expression: parse_script(source).unwrap_err()
---
Diagnostic {
    kind: Syntax,
    span: Span {
        start: 4,
        end: 8,
    },
    message: "optional chain is not a constructor expression",
}
