crates/spite-parser/tests/snapshots/parser_integration__optional_chaining__syntax_and_diagnostic_snapshots-8.snap
---
source: crates/spite-parser/tests/optional_chaining.rs
expression: parse_script(source).unwrap_err()
---
Diagnostic {
    kind: Syntax,
    span: Span {
        start: 18,
        end: 24,
    },
    message: "invalid assignment in strict mode",
}
